--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tail": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "tail": "npx tailwindcss -i ./src/input.css -o ./src/styles/output.css --watch"
   },
   "dependencies": {
     "framer-motion": "^8.5.4",
